WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217697
REGRESSION: fast/canvas/webgl/context-attributes-alpha.html fails
https://bugs.webkit.org/show_bug.cgi?id=217697
Summary
REGRESSION: fast/canvas/webgl/context-attributes-alpha.html fails
Kimmo Kinnunen
Reported
2020-10-14 01:30:24 PDT
REGRESSION: fast/canvas/webgl/context-attributes-alpha.html fails after
bug 217212
Attachments
Patch
(3.82 KB, patch)
2020-10-14 01:46 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2020-10-14 01:46:08 PDT
Created
attachment 411306
[details]
Patch
Antti Koivisto
Comment 2
2020-10-14 02:00:04 PDT
Comment on
attachment 411306
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=411306&action=review
> Source/WebCore/ChangeLog:10 > + WebGLLayer contentsOpaque. Neither the EWS nor the local testing
Why is. that?
EWS
Comment 3
2020-10-14 02:18:27 PDT
Committed
r268446
: <
https://trac.webkit.org/changeset/268446
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411306
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-10-14 02:19:25 PDT
<
rdar://problem/70284915
>
Kimmo Kinnunen
Comment 5
2020-10-14 02:36:42 PDT
>> + WebGLLayer contentsOpaque. Neither the EWS nor the local testing > Why is. that?
It is unclear at this point, I'll investigate this more. The knowns: - I developed the patch on iMac with AMD card. I thought I ran the tests as supposed. - I noticed the regression on MacBook Pro with Intel/AMD, with automatic switching on - EWS runs Intel opus - Intel GPUs have bugs around IOSurfaces and their alpha channels. ANGLE tries to work around them. - The test and the expected.html both use the WebGL canvas alpha feature, which turned out to have the bug - The test should be run on Mac and expected to work - The -expected.html probably should not use the exact same code as what the test is testing, but it's somewhat tricky to alter the content in GPU-agnostic way The unknowns: - Did I run the tests locally? - Does Intel alpha bugs, ANGLE workarounds and the bug in question cancel each other out in EWS? - Does EWS run fast/canvas/webgl/context-attributes-alpha.html - If the bugs cancel each other out, why don't they cancel out with my MacBook Pro? Does it use the AMD part or are the drivers different or is there a bug in ANGLE workaround selection. I'll try to investigate the unknowns
Alexey Proskuryakov
Comment 6
2020-10-14 12:48:48 PDT
To clarify, EWS is Mac Pros with AMD GPUs.
Alexey Proskuryakov
Comment 7
2020-10-14 12:55:23 PDT
Bots that saw this failure were all newer AMD ones: iMac20,1 iMac19,1 MacBookPro15,3 MacBookPro16,1
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug